<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_bar"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/id_tab_weixin">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_tab_weixin_img"
            android:background="#000000"
            android:contentDescription="@string/app_name"
            android:clickable="false"
            android:src="@drawable/tab_weixin_pressed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/微信"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:gravity="center"
            android:id="@+id/textView2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/id_tab_frd">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_tab_frd_img"
            android:background="#000000"
            android:contentDescription="@string/app_name"
            android:clickable="false"
            android:src="@drawable/tab_find_frd_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/朋友"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:gravity="center"
            android:id="@+id/textView3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/id_tab_contact">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_tab_contact_img"
            android:background="#000000"
            android:contentDescription="@string/app_name"
            android:clickable="false"
            android:src="@drawable/tab_address_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/通讯录"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:gravity="center"
            android:id="@+id/textView4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/id_tab_settings">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_tab_settings_img"
            android:background="#000000"
            android:contentDescription="@string/app_name"
            android:clickable="false"
            android:src="@drawable/tab_settings_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/设置"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:gravity="center"
            android:id="@+id/textView5" />
    </LinearLayout>
</LinearLayout>
